--- a/front-end/package.json
+++ b/front-end/package.json
@@ -27,16 +27,11 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@jamesives/github-pages-deploy-action": "^4.3.0",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
     "@types/d3": "^7.4.0",
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "gh-pages": "^3.2.3"
+    "@types/react-dom": "^18.0.6"
   },
   "eslintConfig": {
     "extends": [
