--- a/back-end/serverless.yml
+++ b/back-end/serverless.yml
@@ -1,8 +1,8 @@
 service: hmap-server
 frameworkVersion: '3'
 
-# custom:
-#   tableName: 'options-table'
+custom:
+  tableName: 'options-table'
 
 plugins:
   - serverless-plugin-typescript
@@ -11,21 +11,17 @@ plugins:
 provider:
   name: aws
   runtime: nodejs18.x
-  # iam:
-  #   role:
-  #     statements:
-  #       - Effect: Allow
-  #         Action:
-  #           - dynamodb:Query
-  #           - dynamodb:Scan
-  #           - dynamodb:GetItem
-  #           - dynamodb:PutItem
-  #           - dynamodb:UpdateItem
-  #           - dynamodb:DeleteItem
-  #         Resource:
-  #           - Fn::GetAtt: [ OptionsTable, Arn ]
+  iam:
+    role:
+      statements:
+        - Effect: Allow
+          Action:
+            - dynamodb:GetItem
+            - dynamodb:PutItem
+          Resource:
+            - Fn::GetAtt: [ OptionsTable, Arn ]
   environment:
-    # USERS_TABLE: ${self:custom.tableName}
+    OPTIONS_TABLE: ${self:custom.tableName}
     TRADIER_KEY: ${ssm:tradier-api-key}
 
 functions:
@@ -34,16 +30,16 @@ functions:
     events:
       - httpApi: '*'
 
-# resources:
-#   Resources:
-#     OptionsTable:
-#       Type: AWS::DynamoDB::Table
-#       Properties:
-#         AttributeDefinitions:
-#           - AttributeName: userId
-#             AttributeType: S
-#         KeySchema:
-#           - AttributeName: userId
-#             KeyType: HASH
-#         BillingMode: PAY_PER_REQUEST
-#         TableName: ${self:custom.tableName}
+resources:
+  Resources:
+    OptionsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        AttributeDefinitions:
+          - AttributeName: ticker
+            AttributeType: S
+        KeySchema:
+          - AttributeName: ticker
+            KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
+        TableName: ${self:custom.tableName}
