--- a/amplify.yml
+++ b/amplify.yml
@@ -16,6 +16,6 @@ applications:
         paths:
           - node_modules/**/*
     appRoot: frontend
-    environmentVariables:
-      - name: VITE_API_URL
-        value: https://vk3egx5xz0.execute-api.us-east-2.amazonaws.com
+    env:
+      variables:
+        VITE_API_URL: https://vk3egx5xz0.execute-api.us-east-2.amazonaws.com
