--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,14 @@
   "name": "heatmap-frontend",
   "private": true,
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "eslint . && tsc -b --noEmit",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,json,css}\"",
+    "check": "prettier --check \"src/**/*.{ts,tsx,json,css}\"",
     "preview": "vite preview",
     "generate:api": "openapi-ts -i ../backend/openapi.json -o ./src/lib/api/generated -c @hey-api/client-fetch"
   },
@@ -43,6 +47,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "prettier": "^3.5.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
