--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.983.0",
+    "@aws-sdk/client-ses": "^3.984.0",
     "@aws-sdk/lib-dynamodb": "^3.983.0",
     "@hono/zod-openapi": "^0.19.6",
     "hono": "^4.7.4",
