--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -9,6 +9,8 @@ provider:
   name: aws
   runtime: nodejs24.x
   region: us-east-2
+  httpApi:
+    cors: true
   stage: ${opt:stage, 'dev'}
   logRetentionInDays: 7
   versionFunctions: false
@@ -16,6 +18,7 @@ provider:
     OPTIONS_TABLE_NAME:
       Ref: OptionsTable
     TRADIER_KEY: ${ssm:tradier-api-key}
+    BUG_REPORT_EMAIL: ${ssm:bug-report-email}
   iam:
     role:
       statements:
@@ -25,6 +28,10 @@ provider:
             - dynamodb:PutItem
           Resource:
             - Fn::GetAtt: [OptionsTable, Arn]
+        - Effect: Allow
+          Action:
+            - ses:SendEmail
+          Resource: '*'
 
 functions:
   OptionsAPI:
@@ -39,6 +46,9 @@ functions:
       - httpApi:
           path: /openapi.json
           method: GET
+      - httpApi:
+          path: /bug-report
+          method: POST
 
 resources:
   Resources:
