--- a/amplify.yml
+++ b/amplify.yml
@@ -4,6 +4,7 @@ applications:
       phases:
         preBuild:
           commands:
+            - nvm use 24
             - npm ci
         build:
           commands:
