--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -1,6 +1,7 @@
 {
   "proseWrap": "always",
-  "printWidth": 80,
+  "printWidth": 85,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "semi": true
 }
