--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.20",
+    "@tanstack/react-router": "^1.158.4",
     "@visx/axis": "^3.12.0",
     "@visx/event": "^3.12.0",
     "@visx/group": "^3.12.0",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@hey-api/openapi-ts": "^0.92.3",
+    "@tanstack/router-plugin": "^1.158.4",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
